# pyAcceleratorFEM

./: .gitignore  README.md  pyproject.toml
src/: Domain.py  FieldCalculator.py  __init__.py
src/pyAcceleratorFEM/: FieldCalculator.py  __init__.py
src/pyCavity2d/: Domain.py  FieldCalculator.py  Theory.py  __init__.py
tutorial/: Tutorial.ipynb  Tutorial_5Cell_800MHz_Rectangular.ipynb  Tutorial_transverse.ipynb
