[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",]
build-backend = "setuptools.build_meta"

[project]
name = "pyAcceleratorFEM"
requires-python = ">=3.6"
dynamic = ["version"]
dependencies = [
  "numpy",
  "ngsolve",
  "webgui_jupyter_widgets",
]

[tool.setuptools_scm]
write_to = "src/pyAcceleratorFEM/_version.py"